# ai-cookbook

./: pyproject.toml
agents/building-blocks/: 1-intelligence.py  2-memory.py  3-tools.py  4-validation.py  5-control.py  6-recovery.py  7-feedback.py
knowledge/docling/: 1-extraction.py
mcp/crash-course/: README.md
mcp/crash-course/1-introduction-and-context/: README.md
mcp/crash-course/7-lifecycle-management/: README.md
patterns/workflows/1-introduction/: 1-basic.py
